# sundial

./: package-lock.json  package.json  shell.nix  tailwind.config.cjs  tsconfig.json
src/: App.svelte  main.ts  stores.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: get_data.rs  library.rs  main.rs
src-tauri/src/get_data/: uri.rs
src/lib/: FilePlayer.svelte  PlayablePreview.svelte  Playbar.svelte  Player.svelte  Toggle.svelte
src/types/: album.type.ts  artist.type.ts  player.type.ts  playlist.type.ts  song.type.ts
